src/objects/LogHandler__c.object
<CustomObject>
    <fields>
        <fullName>Attempt_Number__c</fullName>
        <label>Attempt Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_body__c</fullName>
        <label>Request body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_endpoint__c</fullName>
        <label>Request endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_body__c</fullName>
        <label>Response body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_status_code__c</fullName>
        <label>Response status code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>LogHandler</label>
    <nameField>
        <label>Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogHandlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>